Fix graphics post overflow

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -107,6 +107,11 @@ main {
     padding: 2rem 4rem 4rem;
     pointer-events: auto;
   }
+
+  > article > img {
+    max-width: 100%;
+    max-height: 100%;
+  }
 }
 
 .graphics-post-title {
